--- a/index.html
+++ b/index.html
@@ -8,32 +8,37 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <form action="index.html">
+    <form action="index.html" method="POST">
         <fieldset>
             <legend>Registration</legend>
-        <center>
-        <input type="text" id="fname" placeholder="First Name" required> <br>
-        <input type="text" id="lname" placeholder="Last Name" required> <br>
-        <input type="email" id="email" placeholder="Email" required> <br>
-        <input type="password" id="pword" placeholder="Password" required> <br>
-        <input type="number" id="num" placeholder="Phone Number"> <br>
-       
-        <label>Gender:</label>
-        <input type="radio" id="F" value="Female" name="gender">
-        <label>Female</label>
-        <input type="radio" id="M" value="Male" name="gender">
-        <label>Male</label> <br> <br>
-        <label>City:</label>
-        <select> <br>
-            <option>Select City</option>
-            <option>Dipolog City</option>
-            <option>Pagadian City</option>
-            <option>Zamboanga City</option>
-        </select> <br> <br>
-        <div class="button-class">
-        <button> Register </button>
-        </div>
-        </center>
+            <center>
+                <label for="fname">First Name:</label>
+                <input type="text" id="fname" name="fname" placeholder="First Name" required><br>
+                <label for="lname">Last Name:</label>
+                <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Email" required><br>
+                <label for="pword">Password:</label>
+                <input type="password" id="pword" name="password" placeholder="Password" required><br>
+                <label for="num">Phone Number:</label>
+                <input type="number" id="num" name="phone" placeholder="Phone Number"><br>
+                <label>Gender:</label>
+                <input type="radio" id="F" value="Female" name="gender">
+                <label for="F">Female</label>
+                <input type="radio" id="M" value="Male" name="gender">
+                <label for="M">Male</label><br><br>
+                <label for="city">City:</label>
+                <select id="city" name="city">
+                    <option value="">Select City</option>
+                    <option value="Dipolog City">Dipolog City</option>
+                    <option value="Pagadian City">Pagadian City</option>
+                    <option value="Zamboanga City">Zamboanga City</option>
+                </select><br><br>
+                <div class="button-class">
+                    <button type="submit">Register</button>
+                </div>
+            </center>
+        </fieldset>
     </form>
 </body>
-</html>
+</html>```
